# plate-sampler

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/: CMakeLists.txt  Makefile  config.h  options.mk  plate_sampler.proto  pre-build-hook.sh  prebuild.mk  sampler.ino
firmware/.build_ano/: environment-ano.pickle
firmware/.build_ano/uno/: Makefile  Makefile.deps  Makefile.sketch  firmware.elf  firmware.hex
firmware/.build_ano/uno/DcMotor/: dependencies.d
firmware/.build_ano/uno/ExtraMath/: dependencies.d
firmware/.build_ano/uno/arduino/: dependencies.d
firmware/.build_ano/uno/src/: dependencies.d  sampler.cpp
firmware/.build_ano/uno/src/nanopb/: pb_common.d  pb_decode.d
firmware/.build_ano/uno/src/nanopb/tests/backwards_compatibility/: alltypes_legacy.d  decode_legacy.d  encode_legacy.d
firmware/lib/DcMotor/: DcMotor.cpp  DcMotor.h
firmware/lib/ExtraMath/: ExtraMath.cpp  ExtraMath.h
firmware/src/: plate_sampler.pb.c  plate_sampler.pb.h  sampler.ino
